--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,16 +28,17 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/libreria1.jar
+dist.jar=${dist.dir}/Libreria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/libreria1
+dist.jlink.output=${dist.jlink.dir}/Libreria
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
@@ -70,7 +71,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=libreria1
+jlink.launcher.name=Libreria
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -82,7 +83,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
